# python-vcard-v4

./: README.md  pyproject.toml
.github/workflows/: publish.yml
pythonvCard4/: init.py
tests/: test_vcard.py
vCard/: init.py  vCard4.0.py
