[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "0.2.0"
name = "pythonvCard4"
description = "RFC 6350-compliant vCard 4.0 parser & generator"
authors = [ { name = "Sharfuddin Shawon", email = "sharf@shawon.me" } ]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"

[project.urls]
Homepage = "https://shawon.me"
Repository = "https://github.com/sharf-shawon/pythonvCard4"

[tool.poetry.dependencies]
python = ">=3.8"
Pillow = "*"
